# memshark

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: rust.yml
scripts/: Pipfile  echo.py  fbutil.py  v2_buy.py
src/: main.rs
src/cmd/: watch.rs
src/filters/: cache.rs  calldata.rs  equality.rs  mod.rs  range.rs
src/trace/: mod.rs
