[package]
name = "shark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["ws", "rustls"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1.28.2", features = ["full"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6"
futures = "0.3.31"

# Serde for 
serde = "1.0.163"
serde_json = "1.0"

regex = "1.8.4"

log = "0.4.0"
env_logger = "0.9.0"

clap = { version = "4.3.0", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.3.0"
clap_complete_fig = "4.3.0"

anyhow = "1.0"